Modules re-enabled. Trash Bin works.