@@ -31,24 +31,15 @@ javafx {
 }
 
 dependencies {
+    // File/IO
+    implementation 'commons-io:commons-io:2.11.0'
 
     // Tests
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 
     testImplementation 'org.mockito:mockito-core:4.6.1'
-    testImplementation "org.testfx:testfx-core:4.0.16-alpha"
-    testImplementation 'org.testfx:testfx-junit5:4.0.16-alpha'
-    testImplementation 'org.assertj:assertj-core:3.23.1'
-}
-
-
-run {
-    jvmArgs = [
-            '--add-exports=javafx.graphics/com.sun.javafx.application=org.testfx',
-    ]
 }
 
 test {
